I fixed shifted buttons.

--- a/css/main.css
+++ b/css/main.css
@@ -77,6 +77,7 @@
 }
 
 .toolbar {
+    line-height: 1;
     height: 22px;
     margin-bottom: 5px;
     border: none;
